# positive-action-framework

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  aies-plots.ipynb  data_modules.py  dataset_utils.py  encoder.py  generate_confs.sh  main.py  mmd.py  more_plots.py  mypy.ini  pyproject.toml  results_presentation.py  utils.py
config_classes/: dataclasses.py
configs/data/: synth.yaml
configs/model/: advanced.yaml  basic.yaml
model/: blocks.py  encoder_model.py
paf/: log_progress.py  main.py  mmd.py  plotting.py  scoring.py  selection.py  utils.py
paf/architectures/: __init__.py  datastructures.py  paf_model.py
paf/architectures/model/: __init__.py  cyclegan.py  naive.py  nearestneighbour.py  nearestneighbour_model.py
paf/architectures/model/model_components/: __init__.py  blocks.py  classifier_model.py  common_model.py  encoder_model.py  model_utils.py
paf/base_templates/: __init__.py  base_module.py  dataset_utils.py
paf/callbacks/: callbacks.py
paf/config_classes/: dataclasses.py
paf/config_classes/bolts/fair/data/: configs.py
paf/config_classes/conduit/fair/data/: configs.py
paf/config_classes/ethicml/: configs.py
paf/config_classes/paf/architectures/model/: configs.py
paf/config_classes/paf/data_modules/: configs.py
paf/config_classes/paf/data_modules/lilliput_datamodule/: configs.py
paf/config_classes/paf/model/: configs.py
paf/config_classes/pytorch_lightning/trainer/: configs.py
paf/configs/: base_conf.yaml  configen.yaml
paf/configs/clf/: adm.yaml  adult.yaml  adult_mmd.yaml  advanced.yaml  agarwal.yaml  base.yaml  basic.yaml  crime.yaml  dp_oracle.yaml  kamiran.yaml  kamishima.yaml  lill_1.yaml  lrcv.yaml  oracle.yaml  zafar.yaml
paf/configs/clf_trainer/: base.yaml  unit_test.yaml
paf/configs/data/: ad.yaml  adm.yaml  adminv.yaml  adult.yaml  compas.yaml  credit.yaml  crime.yaml  em_base.yaml  health.yaml  law.yaml  lill.yaml  semi.yaml  sqf.yaml  synth.yaml  third.yaml  third_1.yaml
paf/configs/enc/: adm.yaml  adult.yaml  adult_mmd.yaml  advanced.yaml  base.yaml  basic.yaml  crime.yaml  cyc.yaml  cyc_adult.yaml  lill_1.yaml  nn.yaml
paf/configs/enc_trainer/: base.yaml  srv.yaml
paf/configs/exp/: base.yaml  local.yaml  srv.yaml  unit_test.yaml
paf/configs/hydra/launcher/: jl_10.yaml  joblib_base.yaml  slurm_goedel.yaml  slurm_turing.yaml  slurm_turing_gpu.yaml  slurm_turing_nn.yaml
paf/configs/scaler/: minmax.yaml
paf/configs/trainer/: base.yaml  local.yaml  srv.yaml  unit_test.yaml
paf/configs/training/: lill_fear.yaml  simple.yaml
paf/data_modules/: __init__.py  augmenter.py  base_module.py  create.py  lilliput_datamodule.py  semi_synthetic_adult_datamodule.py  simple_adult_datamodule.py  simple_x_datamodule.py  third_way_datamodule.py
paf/datasets/: __init__.py  ethicml_datasets.py  lilliput.py  simple_x.py  third_way.py
paf/datasets/csvs/: adult_syn.csv
paf/ethicml_extension/: __init__.py  flip.py  oracle.py
paf/model/: __init__.py  aies_model.py  aies_properties.py  blocks.py  classifier_model.py  common_model.py  cyclegan.py  encoder_model.py  model_utils.py  naive.py  nearestneighbour_model.py
paf/outputs/2021-04-20/15-03-11/.hydra/: hydra.yaml
paf/outputs/2021-04-20/15-10-16/.hydra/: config.yaml
paf/outputs/2021-04-20/15-14-43/.hydra/: config.yaml  hydra.yaml
paf/outputs/2021-04-20/15-15-52/.hydra/: config.yaml  hydra.yaml
paf/outputs/2021-04-20/15-16-38/.hydra/: config.yaml  hydra.yaml  overrides.yaml
paf/outputs/2021-04-20/15-17-07/.hydra/: config.yaml  hydra.yaml
paf/outputs/2021-04-20/15-18-00/.hydra/: config.yaml  hydra.yaml
paf/outputs/2021-04-20/16-34-19/.hydra/: config.yaml  overrides.yaml
paf/outputs/2021-04-20/16-39-22/.hydra/: config.yaml
paf/outputs/2021-04-20/17-17-04/.hydra/: config.yaml
paf/outputs/2021-04-20/17-20-41/.hydra/: config.yaml
paf/outputs/2021-04-20/17-35-17/.hydra/: config.yaml
paf/outputs/2021-04-20/17-42-06/.hydra/: hydra.yaml
paf/outputs/2021-04-20/17-42-58/.hydra/: config.yaml
paf/outputs/2021-04-20/17-43-41/.hydra/: config.yaml
paf/outputs/2021-04-20/17-44-27/.hydra/: config.yaml  hydra.yaml
paf/outputs/2021-04-20/17-50-56/.hydra/: config.yaml  hydra.yaml  overrides.yaml
paf/outputs/2021-04-20/17-51-10/.hydra/: config.yaml  hydra.yaml
paf/outputs/2021-04-20/17-53-37/.hydra/: config.yaml
paf/outputs/2021-04-21/10-06-43/.hydra/: config.yaml
paf/outputs/2021-04-21/10-08-44/checkpoints/: epoch=49-step=299.ckpt
paf/outputs/2021-04-21/10-30-00/checkpoints/: epoch=49-step=299.ckpt
paf/outputs/2021-04-21/10-30-37/.hydra/: config.yaml
paf/outputs/2021-04-21/10-30-37/checkpoints/: epoch=49-step=299.ckpt
paf/outputs/2021-04-21/10-31-43/checkpoints/: epoch=49-step=299.ckpt
paf/outputs/2021-04-21/10-32-18/checkpoints/: epoch=49-step=299.ckpt
paf/outputs/2021-04-21/10-32-52/checkpoints/: epoch=49-step=305.ckpt
paf/outputs/2021-04-21/10-35-05/checkpoints/: epoch=49-step=305.ckpt
paf/outputs/2021-04-21/10-52-31/.hydra/: config.yaml
src/: logging.py  main.py  mmd.py  plotting.py  run_enc.py  run_model.py  scoring.py  utils.py
src/config_classes/: dataclasses.py
src/configs/: hydra.yaml
src/configs/clf/: advanced.yaml  basic.yaml  lill_1.yaml
src/configs/data/: adult_1.yaml  compas_1.yaml  lill_1.yaml  synth.yaml  synthetic_1.yaml  third_1.yaml
src/configs/enc/: advanced.yaml  basic.yaml  lill_1.yaml
src/configs/model/: advanced.yaml  basic.yaml
src/configs/training/: lill_fear.yaml  simple.yaml
src/data_modules/: augmenter.py  base_module.py  create.py  dataset_utils.py  lilliput_datamodule.py  simple_adult_datamodule.py  simple_x_datamodule.py  third_way_datamodule.py
src/datasets/: adult_dataset.py  ethicml_datasets.py  lilliput.py  simple_x.py  third_way.py
src/ethicml_extension/: __init__.py  dp_oracle.py  eq_opp_oracle.py  flip.py  oracle.py
src/model/: aies_model.py  aies_properties.py  blocks.py  classifier_model.py  common_model.py  encoder_model.py  model_utils.py
tests/: datasets_test.py  model_test.py  selection_rule_test.py
(+83 files in other folders)
