[tool.poetry]
name = "paf"
version = "0.1.0"
description = ""
authors = ["Oliver Thomas <ot@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "*"
optuna = "*"
teext = "*"
wandb = "*"
plotly = "*"
ethicml = {git = "https://github.com/predictive-analytics-lab/EthicML.git", extras = ["all"]}
pytorch-lightning = "*"
neoconfigen = {git = "https://github.com/predictive-analytics-lab/neoconfigen.git", branch = "master"}
palkit = "^0.1.7"

[tool.poetry.dev-dependencies]
black = "*"
data-science-types = "*"
mypy = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "paf.main:launcher"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
known_third_party = []
known_future_library = []
extra_standard_library = []
line_length = 100
profile = "black"
force_sort_within_sections = true
classes = ["MISSING"]
