[tool.poetry]
name = "paf"
version = "0.1.0"
description = ""
authors = ["Oliver Thomas <ot@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "*"
optuna = "*"
teext = "*"
wandb = "*"
plotly = "*"
ethicml = {git = "https://github.com/predictive-analytics-lab/EthicML.git", extras = ["all"], branch="main"}
pytorch-lightning = "*"
neoconfigen = {git = "https://github.com/predictive-analytics-lab/neoconfigen.git", branch = "master"}
palkit = "^0.1.7"

[tool.poetry.dev-dependencies]
black = "*"
data-science-types = "*"
mypy = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
python-type-stubs = {git = "https://github.com/predictive-analytics-lab/python-type-stubs.git", branch = "main" }


[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "paf.main:launcher"

[tool.black]
line-length = 100
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
known_third_party = ["ethicml", "hydra", "kit", "matplotlib", "numpy", "omegaconf", "pandas", "pytest", "pytorch_lightning", "scipy", "seaborn", "sklearn", "torch", "typer", "wandb"]
known_future_library = []
extra_standard_library = ["dataclasses", "__future__", "typing_extensions"]
line_length = 88
profile = "black"
force_sort_within_sections = "True"
classes = ["MISSING"]

[tool.pyright]
include = ["bolts"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"
pythonVersion = "3.7"
reportUnusedImport = "error"
reportDuplicateImport  = "error"
reportIncompatibleVariableOverride = "error"
reportOverlappingOverload = "error"
reportUntypedNamedTuple = "error"
reportConstantRedefinition = "warning"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
strictListInference = true
strictSetInference = true
strictParameterNoneValue = true

[tool.mypy]
python_version = "3.8"
no_implicit_optional = true
allow_redefinition = true
strict_equality = true
check_untyped_defs = true
warn_unreachable = true
disallow_any_unimported = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
warn_unused_ignores = true
exclude = "configs"

[[tool.mypy.overrides]]
module = [
    "albumentations.*",
    "cv2.*",
    "ethicml.*",
    "flash.*",
    "gdown.*",
    "git.*",
    "kit.*",
    "pandas.*",
    "PIL.*",
    "pl_bolts.*",
    "pytest.*",
    "pytorch_lightning.*",
    "requests.*",
    "seaborn.*",
    "scipy.*",
    "sklearn.*",
    "torch.*",
    "torchmetrics.*",
    "torchvision.*",
    "typing_inspect.*",
    "tqdm.*",
    "wandb.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ethicml.*",
    "kit.*",
    "numpy.typing.*",
    "pytest.*",
    "pytorch_lightning.*",
    "sklearn.*",
    "torch.*",
    "torchmetrics.*"
]
follow_imports = "skip"
follow_imports_for_stubs = true
warn_unused_ignores = true
